syntax = "proto3";
package proto;
option go_package = "./;proto";

import "session.proto";

service Cursor {
    // get the current position of the cursor
    rpc CursorPosition (CursorPositionRequest) returns (CursorPositionResponse);

    // get the position of the cursor every time it changes
    rpc CursorPositionStream (CursorPositionStreamRequest) returns (stream CursorPositionStreamResponse);
}

message CursorPositionRequest {
    Session session = 1;
}

message CursorPositionResponse {
    int32 x = 1;
    int32 y = 2;
}

message CursorPositionStreamRequest {
    Session session = 1;
}

message CursorPositionStreamResponse {
    int32 x = 1;
    int32 y = 2;
    string error = 15;
}
